Added instructions on how to update the docs

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,15 @@
 = Javaslang Documentation
 
-This is the source of the http://javaslang.github.io/javaslang-docs/2.0.0-RC2/[Javaslang documentation].
+This is the source of the http://docs.javaslang.com/2.0.0-RC3/[Javaslang documentation].
 
+=== Performing Updates
 
+* Ensure `~/.gradle/gradle.properties` exists with
+
+  githubUser=<GitHub user>
+  githubPassword=<GitHub password>
+
+* Update the version in `gradle.properties`
+* commit, push and gradlew publishGhPages
+
+Note: if the API has changed, some code example test might fail.
